@@ -252,8 +252,8 @@ Fishing.SubSkill.FishermansDiet.Description=Improves hunger restored from fished
 Fishing.SubSkill.FishermansDiet.Stat=Fisherman's Diet:&a Rank {0}
 Fishing.SubSkill.MasterAngler.Name=Master Angler
 Fishing.SubSkill.MasterAngler.Description=Fish are caught more frequently
-Fishing.SubSkill.MasterAngler.Stat=Fishing minimum wait time bonus: &a-{0} seconds
-Fishing.SubSkill.MasterAngler.Stat.Extra=Fishing maximum wait time bonus: &a-{0} seconds
+Fishing.SubSkill.MasterAngler.Stat=Fishing min wait time reduction: &a-{0} seconds
+Fishing.SubSkill.MasterAngler.Stat.Extra=Fishing max wait time reduction: &a-{0} seconds
 Fishing.SubSkill.IceFishing.Name=Ice Fishing
 Fishing.SubSkill.IceFishing.Description=Allows you to fish in icy biomes
 Fishing.SubSkill.IceFishing.Stat=Ice Fishing
@@ -274,7 +274,7 @@ Herbalism.SubSkill.GreenTerra.Name=Green Terra
 Herbalism.SubSkill.GreenTerra.Description=Spread the Terra, 3x Drops, Boosts Green Thumb
 Herbalism.SubSkill.GreenTerra.Stat=Green Terra Duration
 Herbalism.SubSkill.GreenThumb.Name=Green Thumb
-Herbalism.SubSkill.GreenThumb.Description=Auto-Plants crops when harvesting
+Herbalism.SubSkill.GreenThumb.Description=Auto-Plants crops when harvesting with hoe
 Herbalism.SubSkill.GreenThumb.Stat=Green Thumb Chance
 Herbalism.SubSkill.GreenThumb.Stat.Extra=Green Thumb Stage: &a Crops grow in stage {0}
 Herbalism.Effect.4=Green Thumb (Blocks)
